Implemented RTL support

--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="stock_saved_toast">This stock is already saved!</string>
+    <string name="valid_stocks">\"YHOO\",\"AAPL\",\"GOOG\",\"MSFT\</string>
 </resources>
